RESOLVED FIXED 284126
[WebGPU] missing useResources: call leads to out of bounds read
https://bugs.webkit.org/show_bug.cgi?id=284126
Summary [WebGPU] missing useResources: call leads to out of bounds read
Mike Wyrzykowski
Reported 2024-12-05 14:04:21 PST
[WebGPU] missing useResources: call leads to out of bounds read
Attachments
Mike Wyrzykowski
Comment 1 2024-12-05 14:05:22 PST
Mike Wyrzykowski
Comment 2 2024-12-05 14:20:15 PST
EWS
Comment 3 2024-12-06 20:53:57 PST
Committed 287492@main (56f1fb5d4d01): <https://commits.webkit.org/287492@main> Reviewed commits have been landed. Closing PR #37504 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.