[WebGPU] missing useResources: call leads to out of bounds read https://bugs.webkit.org/show_bug.cgi?id=284126 rdar://140803271

Reviewed by Tadeu Zagallo.

Missing useResource: call resulted in a buffer potentially not being resident.

Writing to that buffer which was not resident caused an out of bounds write.

* LayoutTests/fast/webgpu/nocrash/fuzz-284126-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-284126.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderBundleEncoder.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(-[RenderBundleICBWithResources initWithICB:containerBuffer:pipelineState:depthStencilState:cullMode:frontFace:depthClipMode:depthBias:depthBiasSlopeScale:depthBiasClamp:fragmentDynamicOffsetsBuffer:pipeline:minVertexCounts:outOfBoundsReadFlag:]):
(WebGPU::makeRenderBundleICBWithResources):
(-[RenderBundleICBWithResources initWithICB:containerBuffer:pipelineState:depthStencilState:cullMode:frontFace:depthClipMode:depthBias:depthBiasSlopeScale:depthBiasClamp:fragmentDynamicOffsetsBuffer:pipeline:minVertexCounts:]): Deleted.
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executeBundles):

Call useResource: to ensure the MTLBuffer and MTLIndirectCommandBuffer are both resident.
Canonical link: https://commits.webkit.org/287492@main